--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,8 @@ exclude       = [
 publish = false
 
 [features]
-default = []
+default = ["mesalock_sgx"]
+mesalock_sgx = ["sgx_tstd"]
 os-poll = []
 os-util = []
 tcp = []
@@ -32,10 +33,11 @@ uds = []
 extra-docs = []
 
 [dependencies]
-log = "0.4.8"
+log = { git = "https://github.com/mesalock-linux/log-sgx" }
+sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
 
 [target.'cfg(unix)'.dependencies]
-libc = "0.2.62"
+libc = { git = "https://github.com/mesalock-linux/libc-sgx" }
 
 [target.'cfg(windows)'.dependencies]
 miow   = "0.3.3"
